--- a/index.html
+++ b/index.html
@@ -9,16 +9,185 @@
     <!-- bootstrap cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- font-awesome cdn  -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- custom css  -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <main>
+        <!-- banner section  -->
+        <section class="banner w-100">
+            <div class="container">
+                <div class="row pt-5 gx-5">
+                    <div class="col-md-12 col-lg-6 text-light my-auto pb-5">
+                        <div class="right-text-content">
+                            <p class="p-text-design">Computer-controlled digital
+                                transistorized with
+                                electronic
+                                advance</p>
+                            <h1>Honda CBR 300R</h1>
+                            <p class="detail-text-design">The Honda CBR models are a series of Honda sport bikes first
+                                introduced in 1983. With the
+                                exception of the single-cylinder CBR125R, CBR150R, CBR250R and CBR300R, all CBR
+                                motorbikes
+                                have inline engines. Less sporting/general models make up CB series.</p>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-bg-color text-light px-5" data-toggle="modal"
+                                data-target="#exampleModalCenter">
+                                Purchase
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body text-dark">
+                                            <h1>Honda CBR</h1>
+                                            <p>The Honda CBR models are a series of Honda sport bikes first introduced
+                                                in 1983. With the exception of the single-cylinder CBR125R, CBR150R,
+                                                CBR250R and CBR300R, all CBR motorbikes have inline engines. Less
+                                                sporting/general models make up CB series <br><br> CBR300R ABS
+                                                Rs.3,00,000
+                                                Estimated Price
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6 d-flex pb-5"><img class="mx-auto w-100" src="images/header-bike.png"
+                            alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- featured bike -->
+
+        <section class="fetured-bikes mt-5 mb-5 w-100">
+            <div class="container d-flex flex-column justify-content-center align-items-center mb-5">
+                <h1 class="h-text">Fetured Bikes 2021</h1>
+                <p class="p-text">Best bike collection</p>
+            </div>
+
+            <!-- featured bike image  -->
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card border-0 align-items-center mb-5">
+                            <img class="img-gray-scale" src="images/feature-bike.jpg" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0 align-items-center mb-5">
+                            <img class="img-non-gray-scale" src="images/feature-bike.jpg" class="card-img-top"
+                                alt="...">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0 align-items-center mb-5">
+                            <img class="img-gray-scale" src="images/feature-bike.jpg" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- happy clients -->
+        <section class="happy-clients">
+            <div class="container row row-cols-1 row-cols-md-3 g-4 mx-auto">
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="cotainer d-flex justify-content-center img-container mt-5">
+                            <img src="images/user-1.png" class="card-img-top re-size-img mx-auto" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div class="rating">
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill-none fas fa-star"></i>
+                            </div>
+                            <p>Regina Miles</p>
+                            <p>Banker</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="cotainer d-flex justify-content-center img-container mt-5">
+                            <img src="images/user-2.png" class="card-img-top re-size-img" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div class="rating">
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill-none fas fa-star"></i>
+                            </div>
+                            <p>Regina Miles</p>
+                            <p>Banker</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="cotainer d-flex justify-content-center img-container mt-5">
+                            <img src="images/user-3.png" class="card-img-top round-img" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div class="rating">
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill fas fa-star "></i>
+                                <i class="bg-fill-none fas fa-star"></i>
+                            </div>
+                            <p>Regina Miles</p>
+                            <p>Banker</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- bootstrap js cdn  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 </body>
 
