banner,f-bikers,h-clients,faq section done

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <!-- banner section  -->
         <section class="banner w-100">
             <div class="container">
-                <div class="row pt-5 gx-5">
-                    <div class="col-md-12 col-lg-6 text-light my-auto pb-5">
+                <div class="row pt-5 gx-5 w-100">
+                    <div class="col-md-12 col-lg-6 text-light my-auto pb-5 ">
                         <div class="right-text-content">
                             <p class="p-text-design">Computer-controlled digital
                                 transistorized with
@@ -70,8 +70,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 col-lg-6 d-flex pb-5"><img class="mx-auto w-100" src="images/header-bike.png"
-                            alt="">
+                    <div class="col-md-12 col-lg-6 d-flex pb-5">
+                        <img class="mx-auto w-100" src="images/header-bike.png" alt="">
                     </div>
                 </div>
             </div>
@@ -111,83 +111,185 @@
 
         <!-- happy clients -->
         <section class="happy-clients">
-            <div class="container row row-cols-1 row-cols-md-3 g-4 mx-auto">
+            <div class="container row row-cols-1 row-cols-md-3 g-5 mx-auto mb-5">
                 <div class="col">
-                    <div class="card h-100">
-                        <div class="cotainer d-flex justify-content-center img-container mt-5">
-                            <img src="images/user-1.png" class="card-img-top re-size-img mx-auto" alt="...">
+                    <div class="card">
+                        <div class="card-img container w-75 mt-5 mb-3">
+                            <img src="images/user-1.png" class="card-img-top" alt="...">
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">Slate helps you see how
-                                many more days you need
-                                to work to reach your financial
-                                goal for the month and year.</p>
-                            <div class="rating">
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill-none fas fa-star"></i>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                            <div class="card-detail  mb-3">
+                                <p style="color: #6C6C6C;" class="card-text text-center">Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
                             </div>
-                            <p>Regina Miles</p>
-                            <p>Banker</p>
+                            <div class="rating mb-3">
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="blanked far fa-star"></i>
+                            </div>
+                            <small style="color: #23A6F0;" class="fw-bold mb-3">Regina Miles</small>
+                            <small style="color:#252B42;" class="fw-bold mb-3">Banker</small>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <div class="cotainer d-flex justify-content-center img-container mt-5">
-                            <img src="images/user-2.png" class="card-img-top re-size-img" alt="...">
+                    <div class="card">
+                        <div class="card-img container w-75 mt-5 mb-3">
+                            <img src="images/user-2.png" class="card-img-top" alt="...">
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">Slate helps you see how
-                                many more days you need
-                                to work to reach your financial
-                                goal for the month and year.</p>
-                            <div class="rating">
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill-none fas fa-star"></i>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                            <div class="card-detail  mb-3">
+                                <p style="color: #6C6C6C;" class="card-text text-center">Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
                             </div>
-                            <p>Regina Miles</p>
-                            <p>Banker</p>
+                            <div class="rating mb-3">
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="blanked far fa-star"></i>
+                            </div>
+                            <small style="color: #23A6F0;" class="fw-bold mb-3">Regina Miles</small>
+                            <small style="color:#252B42;" class="fw-bold mb-3">Banker</small>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <div class="cotainer d-flex justify-content-center img-container mt-5">
-                            <img src="images/user-3.png" class="card-img-top round-img" alt="...">
+                    <div class="card">
+                        <div class="card-img container w-75 mt-5 mb-3">
+                            <img class="resized-img" src="images/user-3.png" class="card-img-top " alt="...">
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">Slate helps you see how
-                                many more days you need
-                                to work to reach your financial
-                                goal for the month and year.</p>
-                            <div class="rating">
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill fas fa-star "></i>
-                                <i class="bg-fill-none fas fa-star"></i>
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                            <div class="card-detail  mb-3">
+                                <p style="color: #6C6C6C;" class="card-text text-center">Slate helps
+                                    you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
                             </div>
-                            <p>Regina Miles</p>
-                            <p>Banker</p>
+                            <div class="rating mb-3">
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="filled fas fa-star"></i>
+                                <i class="blanked far fa-star"></i>
+                            </div>
+                            <small style="color: #23A6F0;" class="fw-bold mb-3">Regina Miles</small>
+                            <small style="color:#252B42;" class="fw-bold mb-3">Banker</small>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </main>
 
+        <!-- faq section  -->
+        <section class="faq">
+            <div class="container text-center d-flex flex-column justify-content-center align-items-center mb-5">
+                <h1>Frequently Asked <span style="color: #E76F51;">Questions</span></h1>
+            </div>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6 gx-5 mb-5">
+                        <img class="container-fluid" src="images/faq.png" alt="">
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="container">
+                            <div class="row">
+                                <div class="accordion accordion-flush" id="faqlist">
+                                    <div class="accordion-item border-top border-start border-end">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#faq-content-1">
+                                                What are the most important things I should
+                                                know about riding a bike?
+                                            </button>
+                                        </h2>
+                                        <div id="faq-content-1" class="accordion-collapse collapse"
+                                            data-bs-parent="#faqlist">
+                                            <div style="color: #7E848C;" class="accordion-body">
+                                                Safety First! Always obey the rules of the road. Obey all traffic
+                                                signals, signs,
+                                                and laws. Get in the mindset of “driving” your bike—not just
+                                                “riding” your bike.
+                                                This will help you be a more focused and legally compliant bike
+                                                rider.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div style="color: #7E848C;" class="accordion-item border-start border-end">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#faq-content-2">
+                                                How can I tell if my helmet is old and I need a
+                                                new one?
+                                            </button>
+                                        </h2>
+                                        <div id="faq-content-2" class="accordion-collapse collapse"
+                                            data-bs-parent="#faqlist">
+                                            <div class="accordion-body">
+                                                Bear in mind that if the helmet did its job most people would tell
+                                                you that they
+                                                did not even hit their head, or did not hit their head that hard.
+                                                And the thin
+                                                shells on most helmets now tend to hide any dents in the foam.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div style="color: #7E848C;" class="accordion-item border-start border-end">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#faq-content-3">
+                                                My bike has been in storage is it safe to ride?
+                                            </button>
+                                        </h2>
+                                        <div id="faq-content-3" class="accordion-collapse collapse"
+                                            data-bs-parent="#faqlist">
+                                            <div class="accordion-body">
+                                                Leaving your bike outside for a day or two won't do major damage.
+                                                You may see
+                                                signs of rust after a week of neglect. After one month in bad
+                                                conditions, your
+                                                beloved bike parts will start to degrade.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div style="color: #7E848C;"
+                                        class="accordion-item border-start border-end border-bottom">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#faq-content-4">
+                                                What rules should I follow when riding my bike?
+                                            </button>
+                                        </h2>
+                                        <div id="faq-content-4" class="accordion-collapse collapse"
+                                            data-bs-parent="#faqlist">
+                                            <div class="accordion-body">
+                                                Be visible at all times. - Wear bright and visible clothes. Reflective
+                                                stripes ads viability. Always stay out of blind zones. Alert other
+                                                drivers before entering their blind zone.
+                                                Be predictable. - Others on the road must be able to predict your next
+                                                move. Give proper signals before changing a lane or taking deviation.
+                                                Everyone in the road is dumb and partially blind. - Well, just imagine
+                                                so and be prepared for an unexpected turn or braking.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
     <!-- bootstrap js cdn  -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
 
