--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                                                 riders, and for those looking to grow their garage. There’s even a
                                                 version available with our anti-lock braking system. Plus, this year the
                                                 CBR300R brings hot new graphics in two color choices. Time to get
-                                                riding!</p>
+                                                riding!<bold>It only costs a base MSRP of $4,699.</bold>
+                                            </p>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
